# Codigo-app

./: .gitignore  README.md
futbol-app/: README.md
futbol-app/backend/: README.md  clean_db.py  migrate.py  pyproject.toml  requirements.txt
futbol-app/backend/app/: context.py  database.py  dependencies.py  dependency_registry.py  exceptions.py  lambda_deploy.py  main.py  permissions.py  routers.py
futbol-app/backend/app/core/: advanced_filtering.py  config.py
futbol-app/backend/app/core/middlewares/: axiom.py
futbol-app/backend/app/core/permissions/: auth.py
futbol-app/backend/app/database/: base.py  mixins.py
futbol-app/backend/app/migrations/: env.py
futbol-app/backend/app/migrations/versions/: 2025_05_13_0941-1b386c070110_migración_inicial.py  (+1 more)
futbol-app/backend/app/models/: models.py
futbol-app/backend/app/modules/: worker_group.py
futbol-app/backend/app/repositories/: base_repository.py  clauses.py  custom_pagination.py  exceptions.py  sql_repository.py
futbol-app/backend/app/routes/: asignaciones.py  asistencias.py  elementos.py  estadisticas.py  jugadores.py  partidos.py
futbol-app/backend/app/schemas/: schemas.py
futbol-app/backend/app/services/: assessment_service.py  ats_merge_service.py  base_crud_service.py  contact_service.py  echo_api_services.py  exceptions.py  external_api_service.py  grammar_checker_service.py  lambda_service.py  matching_diff_service.py  organization_tracking_service.py  resume_parser_service.py  sql_query_builder_service.py  step_function_service.py  talent_echo_service.py  vectorizer_service.py
(+45 files in other folders)
